--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,11 +6,13 @@
 .blog-header {
     display: inline;
     padding: 20px;
+    margin: 0 auto;
 }
 
 .blog-title {
     display: inline;
     align-items: center;
+    text-decoration: unset;
     justify-content: center;
     padding: 10px;
 }
@@ -18,4 +20,5 @@
 .no-button {
     display: inline;
     padding: 10px;
+    text-decoration: unset;
 }
