classes on forms

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div>
     <div>
         <h2>Login</h2>
-        <form>
+        <form class="form login-form">
             <div>
                 <label for="email-login">email:</label>
                 <input class="form-input" type="text" id="email-login" />
@@ -18,7 +18,7 @@
     <div>
         <h2>Sign up</h2>
 
-        <form>
+        <form class="form signup-form">
             <div>
                 <label for="name-signup">name:</label>
                 <input class="form-input" type="text" id="name-signup" />
