pushing current code

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
-<div>
-    <div>
-        <h2>Welcome, {{name}}!</h2>
+<div class="align-items-center welcome">
+    <div class="align-items-center">
+        <h2 class="align-items-center">Welcome, {{name}}!</h2>
     </div>
 </div>
 
@@ -8,7 +8,7 @@
     <div>
         <h3>Create a new post:</h3>
 
-        <form>
+        <form class="new-post-form">
             <div>
                 <label for="post-name">post name:</label>
                 <input class="form-input" type="text" id="post-name" name="post-name" />
@@ -24,7 +24,7 @@
     </div>
 
     {{#if posts.length}}
-    <div>
+    <div class="post-list">
         <h3>Past Posts:</h3>
 
         {{#each posts as |post|}}
