--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,10 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-.blog-header {
-    display: inline;
-    padding: 20px;
-    margin: 0 auto;
-}
-
-.blog-title {
-    display: inline;
-    align-items: center;
     text-decoration: unset;
-    justify-content: center;
-    padding: 10px;
 }
 
-.no-button {
-    display: inline;
-    padding: 10px;
-    text-decoration: unset;
+
+.welcome {
+    background-color: green;
 }
