--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body>
-  <div class="d-flex justify-content-center flex-column">
+<body class="container">
+  <div>
     <header class="blog-header">
-      <h1 class="blog-title">
+      <h1 class="align-content-center blog-title">
         <a href="/">Tech Blog</a>
       </h1>
       <nav>
@@ -24,7 +24,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main>
       {{{ body }}}
     </main>
     <footer>
@@ -35,6 +35,7 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
