--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
-<div class="align-items-center welcome">
-    <div class="align-items-center">
-        <h2 class="align-items-center">Welcome, {{name}}!</h2>
+<div class="welcome">
+    <div>
+        <h2>Welcome, {{name}}!</h2>
     </div>
 </div>
 
