--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,44 @@
-<h1>Dashboard</h1>
+<div class="welcome">
+    <div>
+        <h2>Welcome, {{name}}!</h2>
+    </div>
+</div>
 
-{{#if blogs.length}}
+<div>
+    <div>
+        <h3>Create a new post:</h3>
 
-{{#each blogs as |blog|}}
-    {{> blogCard}}
-{{/each}}
+        <form class="new-post-form">
+            <div>
+                <label for="post-name">post name:</label>
+                <input class="form-input" type="text" id="post-name" name="post-name" />
+            </div>
+            <div>
+                <label for="post-comment">comment:</label>
+                <textarea class="form-input" id="post-comment" name="post-comment"></textarea>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary">Create</button>
+            </div>
+        </form>
+    </div>
 
-{{else}}
-    <h2>No blogs are entered in the database!</h2>
-{{/if}}
+    {{#if posts.length}}
+    <div class="post-list">
+        <h3>Past Posts:</h3>
+
+        {{#each posts as |post|}}
+        <div>
+            <div>
+                <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
+            </div>
+            <div>
+                <button data-id="{{post.id}}">DELETE</button>
+            </div>
+        </div>
+        {{/each}}
+    </div>
+    {{/if}}
+</div>
+
+<script src="./js/profile.js"></script>
