--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,11 @@
       </h1>
       <nav>
         {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
+        <a href="/dashboard">Dashboard</a> |
+        <a href="/homepage">Home Page</a> |
+        <button id="logout">Logout</button>
         {{else}}
-        <a href="/login">login</a>
+        <a href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
