--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div>
     <h2>{{name}}</h2>
     <p>{{comment}}</p>
     <p>Created by {{user.name}} on {{format_date date_created}}</p>
