--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,8 @@
         <a href="/homepage">Home Page</a> |
         <button id="logout">Logout</button>
         {{else}}
+        <a href="/dashboard">Dashboard</a> |
+        <a href="/homepage">Home Page</a> |
         <a href="/login">Login</a>
         {{/if}}
       </nav>
