--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,11 +17,11 @@
       <nav>
         {{#if logged_in}}
         <a href="/dashboard">Dashboard</a> |
-        <a href="/homepage">Home Page</a> |
+        <a href="/">Home Page</a> |
         <button id="logout">Logout</button>
         {{else}}
         <a href="/dashboard">Dashboard</a> |
-        <a href="/homepage">Home Page</a> |
+        <a href="/">Home Page</a> |
         <a href="/login">Login</a>
         {{/if}}
       </nav>
