--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,69 @@
     text-decoration: unset;
 }
 
+.blog-header {
+    border: 2px solid black;
+    width: auto;
+    padding-left: 50px;
+    padding-top: 20px;
+    padding-right: 50px;
+    padding-bottom: 5px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.forms-container {
+    justify-content: center;
+    margin: 100px;
+}
 
 .welcome {
     background-color: green;
+    justify-content: center;
+}
+
+.forms {
+    border: 1px solid black;
+    margin: 50px;
+}
+
+.login-form {
+    display: block;
+    border: 1px solid black;
+    margin: 20px;
+}
+
+.signup-form {
+    display: block;
+    border: 1px solid black;
+    margin: 20px;
+}
+
+.form-input {
+    margin: 3px;
+}
+
+.btn {
+    border: 1px solid black;
+    background-color: brown;
+    color: white;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+}
+
+.new-post-form {
+    display: block;
+    border: 1px solid black;
+    margin: 50px;
+}
+
+.post-list {
+    border: 1px solid black;
+    margin: 50px;
 }
