--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
-<div>
-    <div>
+<div class="forms-container">
+    <div class="login-form">
         <h2>Login</h2>
-        <form class="form login-form">
+        <form>
             <div>
                 <label for="email-login">email:</label>
                 <input class="form-input" type="text" id="email-login" />
@@ -15,10 +15,9 @@
             </div>
         </form>
     </div>
-    <div>
+    <div class="signup-form">
         <h2>Sign up</h2>
-
-        <form class="form signup-form">
+        <form>
             <div>
                 <label for="name-signup">name:</label>
                 <input class="form-input" type="text" id="name-signup" />
@@ -37,5 +36,4 @@
         </form>
     </div>
 </div>
-
 <script src="./js/login.js"></script>
