--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,10 +5,10 @@
 </div>
 
 <div>
-    <div>
+    <div class="new-post-form">
         <h3>Create a new post:</h3>
 
-        <form class="new-post-form">
+        <form>
             <div>
                 <label for="post-name">post name:</label>
                 <input class="form-input" type="text" id="post-name" name="post-name" />
@@ -33,7 +33,7 @@
                 <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
             </div>
             <div>
-                <button data-id="{{post.id}}">DELETE</button>
+                <button class="btn" data-id="{{post.id}}">DELETE</button>
             </div>
         </div>
         {{/each}}
