--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@
 }
 
 .container {
+    background-color: #4E8098;
     display: flex;
     flex-direction: row;
     justify-content: left;
@@ -37,13 +38,15 @@
 .login-form {
     display: block;
     border: 1px solid black;
-    margin: 20px;
+    margin: 30px;
+    padding: 20px;
 }
 
 .signup-form {
     display: block;
     border: 1px solid black;
-    margin: 20px;
+    margin: 30px;
+    padding: 20px;
 }
 
 .form-input {
